fix  修复监视进程
add 新增多个目标目录一起变更

--- a/PackageEasy/更新说明/V1.0.5.md
+++ b/PackageEasy/更新说明/V1.0.5.md
@@ -1,7 +1,7 @@
 # V1.0.5预更新
-## 待解决问题&功能
 * 解决多语言切换问题
 * 解决安装可以选择复制文件到指定目录，但是卸载时不进行删除
-* 解决新增程序集导入时判重应该是所有组，目前会导致重复添加
 * 新增批量删除，批量选择，批量变更目录
-* 修改展示样式改成卡片式 右键属性包含有额外属性
+* 新增忽略列表，解决反复添加不需要文件问题
+* 解决无法配置NSIS路径问题
+* 解决在结束页面不设置监视进程时无法编译通过的问题
