--- a/PackageEasy/更新说明/V1.0.5.md
+++ b/PackageEasy/更新说明/V1.0.5.md
@@ -1,7 +1,8 @@
 # V1.0.5预更新
 * 解决多语言切换问题
 * 解决安装可以选择复制文件到指定目录，但是卸载时不进行删除
-* 新增批量删除，批量选择，批量变更目录
-* 新增忽略列表，解决反复添加不需要文件问题
 * 解决无法配置NSIS路径问题
 * 解决在结束页面不设置监视进程时无法编译通过的问题
+* 新增批量删除，批量选择，批量变更目录
+* 新增忽略列表，解决反复添加不需要文件问题
+* 新增绑定文件格式可以默认绑定，无需再安装时选择
