--- a/PackageEasy/更新说明/V1.0.5.md
+++ b/PackageEasy/更新说明/V1.0.5.md
@@ -1,6 +1,6 @@
-# V1.0.5预更新
+# V1.0.5更新
 * 解决多语言切换问题
-* 解决安装可以选择复制文件到指定目录，但是卸载时不进行删除
+* 解决安装可以选择复制文件到指定目录
 * 解决无法配置NSIS路径问题
 * 解决在结束页面不设置监视进程时无法编译通过的问题
 * 新增批量删除，批量选择，批量变更目录
